--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "mdbreact": "^4.13.0",
     "node-sass": "^4.12.0",
     "normalize.css": "7.0.0",
+    "numeral": "^2.0.6",
     "react": "^16.6.3",
     "react-dom": "^16.6.3",
     "react-modal": "2.2.2",
