--- a/package.json
+++ b/package.json
@@ -14,33 +14,34 @@
     "heroku-postbuild": "npm run build:prod"
   },
   "dependencies": {
+    "@babel/cli": "^7.4.4",
+    "@babel/core": "^7.4.5",
+    "@babel/plugin-proposal-class-properties": "^7.4.4",
+    "@babel/plugin-proposal-object-rest-spread": "^7.4.4",
+    "@babel/polyfill": "^7.4.4",
+    "@babel/preset-env": "^7.4.5",
+    "@babel/preset-react": "^7.0.0",
+    "@fortawesome/fontawesome-free": "^5.8.2",
     "@fortawesome/fontawesome-svg-core": "^1.2.18",
     "@fortawesome/free-solid-svg-icons": "^5.8.2",
     "@fortawesome/react-fontawesome": "^0.1.4",
-    "babel-cli": "^6.26.0",
-    "babel-core": "6.25.0",
-    "babel-loader": "7.1.1",
-    "babel-plugin-transform-class-properties": "6.24.1",
-    "babel-plugin-transform-object-rest-spread": "^6.26.0",
-    "babel-polyfill": "^6.26.0",
-    "babel-preset-env": "1.5.2",
-    "babel-preset-react": "6.24.1",
+    "babel-loader": "^8.0.6",
     "body-parser": "^1.18.3",
     "bootstrap": "^4.3.1",
     "cors": "^2.8.5",
     "css-loader": "^2.1.1",
     "express": "^4.16.4",
-    "extract-text-webpack-plugin": "^3.0.0",
     "firebase": "^5.5.4",
     "history": "^4.7.2",
     "live-server": "^1.2.1",
     "mdbreact": "^4.13.0",
+    "mini-css-extract-plugin": "^0.7.0",
     "node-sass": "^4.12.0",
     "normalize.css": "7.0.0",
     "numeral": "^2.0.6",
     "react": "^16.6.3",
     "react-dom": "^16.6.3",
-    "react-modal": "2.2.2",
+    "react-image": "^2.1.3",
     "react-perfect-scrollbar": "^1.2.0",
     "react-redux": "^5.0.5",
     "react-router-dom": "^4.1.2",
@@ -51,10 +52,10 @@
     "sass-loader": "6.0.6",
     "style-loader": "0.18.2",
     "validator": "8.0.0",
-    "webpack": "^3.1.0"
+    "webpack": "^4.33.0",
+    "webpack-cli": "^3.3.3"
   },
   "devDependencies": {
-    "@fortawesome/fontawesome-free": "^5.8.2",
     "cross-env": "^5.2.0",
     "dotenv": "^6.1.0",
     "enzyme": "^3.7.0",
@@ -63,7 +64,7 @@
     "jest": "^24.8.0",
     "react-test-renderer": "^16.6.3",
     "redux-mock-store": "^1.5.3",
-    "webpack-dev-server": "^2.5.1"
+    "webpack-dev-server": "^3.7.1"
   },
   "description": "booking-app"
 }
