--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "react": "^16.6.3",
     "react-dom": "^16.6.3",
     "react-image": "^2.1.3",
+    "react-medium-image-zoom": "^3.1.2",
     "react-perfect-scrollbar": "^1.2.0",
     "react-redux": "^5.0.5",
     "react-router-dom": "^4.1.2",
