--- a/package.json
+++ b/package.json
@@ -41,7 +41,6 @@
     "numeral": "^2.0.6",
     "react": "^16.6.3",
     "react-dom": "^16.6.3",
-    "react-image": "^2.1.3",
     "react-medium-image-zoom": "^3.1.2",
     "react-perfect-scrollbar": "^1.2.0",
     "react-redux": "^5.0.5",
@@ -67,5 +66,13 @@
     "redux-mock-store": "^1.5.3",
     "webpack-dev-server": "^3.7.1"
   },
-  "description": "booking-app"
+  "description": "booking-app",
+  "repository": {
+    "type": "git",
+    "url": "git+ssh://git@github.com/jamesmogambi/react-Firebase-booking-app-v1.git"
+  },
+  "bugs": {
+    "url": "https://github.com/jamesmogambi/react-Firebase-booking-app-v1/issues"
+  },
+  "homepage": "https://github.com/jamesmogambi/react-Firebase-booking-app-v1#readme"
 }
